Cambios en el formulario

--- a/PAGES/contacto.html
+++ b/PAGES/contacto.html
@@ -67,6 +67,7 @@
         <img src="../iconos/buzon.png" alt="foto carnet de la caricatura de una mujer">
       </div>
 </section>
+<!--formulario-->
 <section class="contacto-2">
 
     <div class="contenido-seccion">
@@ -79,6 +80,7 @@
            
           </form>
 </section>
+<!--formulario-->
 
       
       <footer>
