Cambios en detalles de enlace, y arreglo de responsive

--- a/PAGES/experiencia.html
+++ b/PAGES/experiencia.html
@@ -70,7 +70,7 @@
 
       <section class="laboral">
         <div class="contenido-seccion">
-          <h2 class="titulo-seccion laboral-a"><a href="../index.html">EXPERIENCIA LABORAL</h2></a>
+          <button class="boton"><h2 class="titulo-seccion laboral-a"><a href="../index.html">EXPERIENCIA LABORAL</h2></a></button>
       <br>
           <table class="table table-hover">
             <tr class="table-info">
