--- a/PAGES/contacto.html
+++ b/PAGES/contacto.html
@@ -54,10 +54,10 @@
           <a href="">
             <img src="../iconos/whatsapp.svg" alt="logo de whatsapp">
           </a>
-          <a href="">
+          <a href="https://www.instagram.com/desireindy/">
             <img src="../iconos/instagram.svg" alt="logo de instagram">
           </a>
-          <a href="">
+          <a href="https://www.facebook.com/Desireindy/">
             <img src="../iconos/facebook.svg" alt="logo de facebook">
           </a>
         </div>
