--- a/PAGES/experiencia.html
+++ b/PAGES/experiencia.html
@@ -34,8 +34,8 @@
           <div class="collapse navbar-collapse" id="navbarToggleExternalContent">
             <ul id="menu-desplegable">
               <li class="lista"><a href="../index.html">INICIO</a></li>
-              <li class="lista"><a href="#sobremi">SOBRE MI</a></li>
-              <li class="lista"><a href="#habilidades">HABILIDADES</a></li>
+              <li class="lista"><a href="../#sobremi">SOBRE MI</a></li>
+              <li class="lista"><a href="../#habilidades">HABILIDADES</a></li>
               <li class="lista"><a href="./contacto.html">CONTACTO</a></li>
             </ul>
 
