--- a/PAGES/contacto.html
+++ b/PAGES/contacto.html
@@ -50,21 +50,10 @@
       <div class="info">
         <h1>DESIRÉ MASILLA</h1>
         <h2>Secretaria Ejecutiva</h2>
-        <div class="redes">
-          <a href="">
-            <img src="../iconos/whatsapp.svg" alt="logo de whatsapp">
-          </a>
-          <a href="https://www.instagram.com/desireindy/">
-            <img src="../iconos/instagram.svg" alt="logo de instagram">
-          </a>
-          <a href="https://www.facebook.com/Desireindy/">
-            <img src="../iconos/facebook.svg" alt="logo de facebook">
-          </a>
-        </div>
       </div>
 
       <div id="foto-2">
-        <img src="../iconos/buzon.png" alt="foto carnet de la caricatura de una mujer">
+        <img src="../iconos/buzon.png" alt="dibujo de un sobre">
       </div>
 </section>
 <!--formulario-->
@@ -76,7 +65,7 @@
             <p type="NOMBRE:"><input placeholder="Escribe tu nombre.."></input></p>
             <p type="EMAIL:"><input placeholder="Escribe tu mail"></input></p>
             <p type="MENSAJE:"><input placeholder="Escribe tu mensaje"></input></p>
-            <button>Enviar</button>
+            <button type="submit">Enviar</button>
            
           </form>
 </section>
