--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
    <link rel="stylesheet" href="./css/bootstrap.min.css">
 
   <link rel="stylesheet" href="./styles.css">
-  <title>EXPERIENCIA LABORAL</title>
+  <title>MI CURRICULUM</title>
 
 
 </head>
@@ -36,7 +36,7 @@
               <li class="lista"><a href="../index.html">INICIO</a></li>
               <li class="lista"><a href="../#sobremi">SOBRE MI</a></li>
               <li class="lista"><a href="../#habilidades">HABILIDADES</a></li>
-              <li class="lista"><a href="./contacto.html">CONTACTO</a></li>
+              <li class="lista"><a href="./PAGES/contacto.html">CONTACTO</a></li>
             </ul>
 
           </div>
@@ -138,7 +138,7 @@
           <h2>Secretaria Ejecutiva</h2>
 
           <div class="redes-f">
-            <a href="">
+            <a href="https://api.whatsapp.com/send?phone=3471314419">
               <img src="../iconos/whatsapp.svg" alt="logo de whatsapp">
             </a>
             <a href="https://www.instagram.com/desireindy/">
