Trabajo final Prog. Front End Arg.Prog.4.0 CV ONLINE

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         <h5>Teléfono</h5>
         <p class="p-detalle">+54 3471-3144xx</p>
         <h5>Email</h5>
-        <p class="p-detalle">desiremans@hotmail.com</p>
+        <p class="p-detalle">desirelionelacasco@gmail.com</p>
       </div>
 
   <!--HABILIDADES-->
