--- a/PAGES/contacto.html
+++ b/PAGES/contacto.html
@@ -62,8 +62,8 @@
     <div class="contenido-seccion">
         <form class="form">
             <h2>CONTACTANOS</h2>
-            <img src="../iconos/call.png" alt="dibujo  de telefono"><a class="telefono" href="tel:+543471314419">+54 9 3564-582222</a><br>
-           <img src="../iconos/email.png" alt="dibujo de sobre"><a class="mail" href="mailto:desiremans@hotmail.com">desiremans@hotmail.com</a>
+            <img src="../iconos/call.png" alt="dibujo  de telefono"><a class="telefono" href="tel:+543471314419">+54 3471-314419</a><br>
+           <img src="../iconos/email.png" alt="dibujo de sobre"><a class="mail" href="mailto:desirelionelacasco@gmail.com">desirelionelacasco@gmail.com</a>
             <p type="NOMBRE:"><input placeholder="Escribe tu nombre.."></input></p>
             <p type="EMAIL:"><input placeholder="Escribe tu mail"></input></p>
             <p type="MENSAJE:"><input placeholder="Escribe tu mensaje"></input></p>
