Cambio de foto de perfil, arreglo de formulario y modificacones varias

--- a/PAGES/experiencia.html
+++ b/PAGES/experiencia.html
@@ -90,9 +90,20 @@
             <tr class="table-danger">
             <th>Empleada doméstica y niñera</th>
             <td>3 años y medio</td>
-          
             <td>Limpieza en casa de familia y cuidado de un niño de 5 años.</td>
             </tr>
+
+            <tr class="table-warning">
+              <th>Elaboración de prepizzas</th>
+              <td>2 años y medio</td>
+              <td>Elaboración propia de discos de pizzas,  busqueda de negocios y locales de eventos pra niños, coordinación de pedidos y entregas en tiempo y forma.</td>
+            </tr>
+
+            <tr class="table-danger">
+              <th>Vendedora de productos Reino de la miel</th>
+              <td>2 años y medio</td>
+              <td>Tomar pedidos y corrodinar cobros y entregas de productos.</td>
+              </tr>
           </table>
           <button class="btn-volver"><a href="../index.html">
             Volver</a></button>
