--- a/index.html
+++ b/index.html
@@ -48,12 +48,12 @@
       </header>
 
       <div class="info">
-        <h1>DESIRÉ MASILLA</h1>
+        <h1>DESIRÉ MANSILLA</h1>
         <h2>Secretaria Ejecutiva</h2>
       </div>
 
       <div id="foto-2">
-        <img src="./IMG/foto.webp" alt="dibujo del perfil de una mujer">
+        <img src="./IMG/foto-perfil.webp" alt="foto de desire mansilla">
       </div>
 </section>
 <!---->
@@ -81,7 +81,7 @@
         <h5>Dirección</h5>
         <p class="p-detalle">Cañada de Gómez (Santa Fé)</p>
         <h5>Teléfono</h5>
-        <p class="p-detalle">+54 3471-3144xx</p>
+        <p class="p-detalle">+54 3471-3144</p>
         <h5>Email</h5>
         <p class="p-detalle">desirelionelacasco@gmail.com</p>
       </div>
